--- a/src/waybar/style.css
+++ b/src/waybar/style.css
@@ -1,16 +1,17 @@
 * {
     border: none;
     border-radius: 0;
+    /* `otf-font-awesome` is required to be installed for icons */
     font-family: Roboto, Helvetica, Arial, sans-serif;
     font-size: 10px;
     min-height: 0;
 }
 
 window#waybar {
-    background: rgba(43, 48, 59, 0.5);
+    background-color: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
-    transition-property: background, background-color;
+    transition-property: background-color;
     transition-duration: .5s;
 }
 
@@ -20,10 +21,10 @@ window#waybar.hidden {
 
 /*
 window#waybar.empty {
-    background: transparent;
+    background-color: transparent;
 }
 window#waybar.solo {
-    background: #FFFFFF;
+    background-color: #FFFFFF;
 }
 */
 
@@ -36,17 +37,23 @@ window#waybar.chromium {
     border: none;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button {
     padding: 0 5px;
-    background: transparent;
+    background-color: transparent;
     color: #ffffff;
-    border-bottom: 3px solid transparent;
+    /* Use box-shadow instead of border so the text isn't offset */
+    box-shadow: inset 0 -3px transparent;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#workspaces button:hover {
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.focused {
-    background: #64727D;
-    border-bottom: 3px solid #ffffff;
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.urgent {
@@ -54,14 +61,41 @@ window#waybar.chromium {
 }
 
 #mode {
-    background: #64727D;
+    background-color: #64727D;
     border-bottom: 3px solid #ffffff;
 }
 
-#clock, #battery, #cpu, #memory, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor {
+#clock,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#mpd {
     padding: 0 10px;
-    margin: 0 5px;
+    margin: 0 4px;
     color: #ffffff;
+}
+
+#window,
+#workspaces {
+    margin: 0 4px;
+}
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
 }
 
 #clock {
@@ -86,7 +120,7 @@ window#waybar.chromium {
 }
 
 #battery.critical:not(.charging) {
-    background: #f53c3c;
+    background-color: #f53c3c;
     color: #ffffff;
     animation-name: blink;
     animation-duration: 0.5s;
@@ -100,56 +134,56 @@ label:focus {
 }
 
 #cpu {
-    background: #2ecc71;
+    background-color: #2ecc71;
     color: #000000;
 }
 
 #memory {
-    background: #9b59b6;
+    background-color: #9b59b6;
 }
 
 #backlight {
-    background: #90b1b1;
+    background-color: #90b1b1;
 }
 
 #network {
-    background: #2980b9;
+    background-color: #2980b9;
 }
 
 #network.disconnected {
-    background: #f53c3c;
+    background-color: #f53c3c;
 }
 
 #pulseaudio {
-    background: #f1c40f;
+    background-color: #f1c40f;
     color: #000000;
 }
 
 #pulseaudio.muted {
-    background: #90b1b1;
+    background-color: #90b1b1;
     color: #2a5c45;
 }
 
 #custom-media {
-    background: #66cc99;
+    background-color: #66cc99;
     color: #2a5c45;
     min-width: 100px;
 }
 
-.custom-spotify {
-    background: #66cc99;
+#custom-media.custom-spotify {
+    background-color: #66cc99;
 }
 
-.custom-vlc {
-    background: #ffa000;
+#custom-media.custom-vlc {
+    background-color: #ffa000;
 }
 
 #temperature {
-    background: #f0932b;
+    background-color: #f0932b;
 }
 
 #temperature.critical {
-    background: #eb4d4b;
+    background-color: #eb4d4b;
 }
 
 #tray {
@@ -166,18 +200,26 @@ label:focus {
 }
 
 #mpd {
-    background: #66cc99;
+    background-color: #66cc99;
     color: #2a5c45;
 }
 
 #mpd.disconnected {
-    background: #f53c3c;
+    background-color: #f53c3c;
 }
 
 #mpd.stopped {
-    background: #90b1b1;
+    background-color: #90b1b1;
 }
 
 #mpd.paused {
-    background: #51a37a;
+    background-color: #51a37a;
+}
+
+#language {
+    background: #00b093;
+    color: #740864;
+    padding: 0 5px;
+    margin: 0 5px;
+    min-width: 16px;
 }
